hero_about_prices

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <main>
       <!--Hero section-->
 
-      <section class="hero">
-        <div class="container">
+      <section class="hero section">
+        <div class="container hero__container">
           <div class="hero__left--side">
           <ul class="hero__social list">
             <li class="hero__social--item item">
@@ -82,9 +82,9 @@
 
       <!--About section-->
 
-      <section class="about" id="about">
-        <div class="container">
-          <ul class="about__list list">
+      <section class="about section" id="about">
+        <div class="container about__container">
+          <ul class="about__list list ">
             <li class="about__item item">
               <img
                 class="about__img"
@@ -104,7 +104,7 @@
               />
             </li>
           </ul>
-          <div>
+          <div class="about__right">
             <p class="about__uppertitle">About</p>
             <h2 class="about__title">Best Barbershop in your city</h2>
             <p class="about__undertitle"
@@ -116,18 +116,18 @@
               are a team that is always "on the same wave" with clients. Therefore, we are always
               ready to improve everyone who comes to us!</p
             >
-            <button class="about__button" type="button">Online-booking</button>
+            <button class="about__button header__button" type="button"><span class="about__white--current">Online-booking</span></button>
           </div>
         </div>
       </section>
 
       <!--Price section-->
-      <section class="price" id="price">
+      <section class="price section" id="price">
         <div class="container">
           <p class="price__uppertitle">Spend your time with the best masters</p>
           <h2 class="price__title">Services and prices</h2>
 
-          <ul class="price__list list">
+          <ul class="price__list card-set list">
             <li class="price__item item">
               <ul class="price__list--service list">
                 <li class="price__item--service item"
@@ -163,13 +163,14 @@
               </ul>
             </li>
           </ul>
+          <button class="price__button header__button" type="button">Online-booking</button>
         </div>
       </section>
 
       <!--section customers-->
 
-      <section class="customers">
-        <div class="container">
+      <section class="customers section">
+        <div class="container customers__container">
           <div class="customers__left">
             <ul class="customers__list list">
               <li class="customers__item item">
@@ -191,9 +192,9 @@
             </ul>
           </div>
           <div class="customers__rigth">
-            <p class="customers__uppertitle">Old traditional school</p>
-            <h2 class="customers__title">Why people come to us?</h2>
-            <p class="customers__undertitle"
+            <p class="customers__uppertitle about__uppertitle">Old traditional school</p>
+            <h2 class="customers__title about__title">Why people come to us?</h2>
+            <p class="customers__undertitle about__undertitle "
               >Only good things are said about us. But it's better to see and feel 1 time than read
               10 times.</p
             >
@@ -203,7 +204,7 @@
 
       <!--Section Barbers-->
 
-      <section class="barbers" id="barbers">
+      <section class="barbers section" id="barbers">
         <div class="container">
           <p class="barbers__uppertitle">For true enjoyers of the atmosphere</p>
           <h2 class="barbers__title">Our barbers</h2>
@@ -314,7 +315,7 @@
 
       <!--GALLERY-->
 
-      <section class="gallery">
+      <section class="gallery section">
         <p class="gallery__uppertitle">In Latin, "barba" means "beard"</p>
         <h2 class="gallery__title">Gallery</h2>
         <ul class="gallery__list list">
@@ -355,7 +356,7 @@
 
       <!--Section Booking-->
 
-      <section class="booking">
+      <section class="booking section">
         <h2 class="booking__title">Online-booking</h2>
         <form action="" class="booking__form">
           <label for="" class="booking__label">
@@ -384,7 +385,7 @@
 
       <!--Section Contacts-->
 
-      <section class="contacts" id="contacts">
+      <section class="contacts section" id="contacts">
         <h2 class="contacts__title">Contacts</h2>
         <adress class="contacts__adress">
           <ul class="contacts__list list">
