--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </ul>
         <div class="header__contact card-set">
           <a href="" class="nav__item--link link">+38 044 111 11 11</a>
-          <button class="header__button" type="button">Online-booking</button>
+          <button class="header__button" type="button"><span class="button__text">ONLINE-BOOKING</span></button>
         </div>
       </div>
     </header>
