--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
               >We are experts in trendy men’s haircuts. We work quickly, carefully and with
               style.</p
             >
+            <ul class="hero__list list">
+              <li class="hero__item item"><button class="hero__btn type=" button">Back</button></li>
+              <li class="hero__item item"><button class="hero__btn type=" button">Forward</button></li>
+            </ul>
           </div>
-          <ul class="hero__list list">
-            <li class="hero__item item"><a href="" class="hero__link link">Back</a></li>
-            <li class="hero__item item"><a href="" class="hero__link link">Forward</a></li>
-          </ul>
         </div>
       </section>
 
